--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
   "author": "Kuba Niechcial <jakub.niechcial@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-runtime": "^6.9.2"
   },
   "dependencies": {
     "react": "^15.1.0",
+    "lodash": "^4.13.1"
   }
 }
