--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "babel-runtime": "^6.9.2"
   },
   "dependencies": {
-    "react": "^15.1.0",
-    "lodash": "^4.13.1"
+    "react": "^15.1.0"
   }
 }
